[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/VoxelCamera.gd" type="Script" id=1]
[ext_resource path="res://Scenes/SelectedVoxelObject.gd" type="Script" id=2]
[ext_resource path="res://Scenes/VoxelViewer.gd" type="Script" id=4]

[sub_resource type="Environment" id=19]
ambient_light_color = Color( 1, 1, 1, 1 )

[sub_resource type="World" id=17]
environment = SubResource( 19 )

[sub_resource type="PlaneMesh" id=20]

[sub_resource type="SpatialMaterial" id=21]
flags_transparent = true
vertex_color_use_as_albedo = true
albedo_color = Color( 0.752941, 0.752941, 1, 0.12549 )

[node name="VoxelObjectView" type="ViewportContainer"]
margin_right = 1236.0
margin_bottom = 620.0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VoxelViewport" type="Viewport" parent="."]
size = Vector2( 1236, 620 )
own_world = true
world = SubResource( 17 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="VoxelCameraPivotPoint" type="Spatial" parent="VoxelViewport"]
transform = Transform( 0.623613, 0.333328, 0.707107, -0.471397, 0.881921, 0, -0.623613, -0.333328, 0.707107, 0.5, 4, 0.5 )

[node name="VoxelCamera" type="Camera" parent="VoxelViewport/VoxelCameraPivotPoint"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -6, 0, 0 )
projection = 1
current = true
fov = 90.0
size = 10.0
far = 8192.0
script = ExtResource( 1 )

[node name="VoxelCreator" type="Spatial" parent="VoxelViewport"]

[node name="HighlightBase" type="MeshInstance" parent="VoxelViewport/VoxelCreator"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.01, 0 )
mesh = SubResource( 20 )
skeleton = NodePath("../..")
material/0 = SubResource( 21 )

[node name="AllVoxelObjects" type="MeshInstance" parent="VoxelViewport/VoxelCreator"]

[node name="SelectedPivotPoint" type="Spatial" parent="VoxelViewport/VoxelCreator"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 4, 0.5 )

[node name="SelectedVoxelObject" type="MeshInstance" parent="VoxelViewport/VoxelCreator/SelectedPivotPoint"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, -4, -0.5 )
skeleton = NodePath("../..")
script = ExtResource( 2 )
